--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "accumulators"
 version = "0.1.0"
-authors = ["dignifiedquire <dignifiedquire@users.noreply.github.com>"]
+authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
+homepage = "https://github.com/dignifiedquire/rust-accumulators"
+repository = "https://github.com/dignifiedquire/rust-accumulators"
+
+keywords = []
 
 [dependencies]
 num-bigint = { version = "0.2", features = ["rand", "i128", "u64_digit"], package = "num-bigint-dig" }
