--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,8 @@ blake2 = "0.8.0"
 generic-array = "0.12.0"
 byteorder = "1.2.7"
 bitvec = "0.9.0"
-
+serde = "1.0"
+serde_derive = "1.0"
 
 [dev-dependencies]
 criterion = "0.2"
