--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,16 +12,19 @@ keywords = []
 [dependencies]
 num-bigint = { version = "0.2", features = ["rand", "i128", "u64_digit"], package = "num-bigint-dig" }
 num-traits = "^0.2.6"
-rand = "^0.5"
-rsa = { git = "https://github.com/RustCrypto/RSA" }
-failure = "^0.1.3"
 num-integer = "0.1.39"
+num-iter = "0.1.37"
+rand = "^0.5"
+failure = "0.1"
+failure_derive = "0.1"
 blake2 = "0.8.0"
 generic-array = "0.12.0"
 byteorder = "1.2.7"
 bitvec = "0.9.0"
 serde = "1.0"
 serde_derive = "1.0"
+lazy_static = "1.2.0"
+
 
 [dev-dependencies]
 criterion = "0.2"
