--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ bitvec = "0.9.0"
 serde = "1.0"
 serde_derive = "1.0"
 lazy_static = "1.2.0"
-
+classgroup = { path = "./classgroup" }
 
 [dev-dependencies]
 criterion = "0.2"
