change dep source for better history manegment

--- a/classgroup/Cargo.toml
+++ b/classgroup/Cargo.toml
@@ -11,6 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # and limitations under the License.
+
 [package]
 name = "classgroup"
 version = "0.1.0"
@@ -22,7 +23,7 @@ edition = "2018"
 
 [dependencies]
 num-traits = "0.2"
-rust-gmp = { git = "https://github.com/poanetwork/rust-gmp" }
+rust-gmp = { git = "https://github.com/stichtingorganism/rust-gmp" }
 libc = "0.2"
 
 [dev-dependencies]
