--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "accumulators"
 version = "0.1.0"
-authors = ["dignifiedquire <dignifiedquire@gmail.com>, organism <hello@organism.ai>"]
+authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 homepage = "https://github.com/dignifiedquire/rust-accumulators"
