--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,17 @@ blake2 = "0.8.0"
 generic-array = "0.12.0"
 byteorder = "1.2.7"
 bitvec = "0.9.0"
-serde = "1.0"
-serde_derive = "1.0"
-classgroup = { git = "https://github.com/stichtingorganism/classygroup" }
+
+[dependencies.serde]
+optional = true
+version = "1.0"
+default-features = false
+features = ["std", "derive"]
+
+
+[dependencies.classgroup]
+optional = true
+git = "https://github.com/stichtingorganism/classygroup" 
 
 
 [dev-dependencies]
@@ -38,5 +46,5 @@ harness = false
 
 [features]
 default = ["rsa_group"]
-class_group = []
+class_group = ["serde"]
 rsa_group = []
