--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,9 +40,6 @@ jobs:
       - restore_cache:
           keys:
             - cargo-v0-{{ checksum "rust-toolchain" }}-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}-{{ arch }}
-      - restore_cache:
-          keys:
-            - parameter-cache-{{ .Revision }}
       - run:
           name: Test (stable)
           command: cargo +stable test --verbose --frozen --all
@@ -69,13 +66,11 @@ jobs:
       - restore_cache:
           keys:
             - cargo-v0-{{ checksum "rust-toolchain" }}-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}-{{ arch }}
-            - parameter-cache-{{ .Revision }}
       - run:
           name: Test (stable) in release profile
           command: |
             cargo +stable test --verbose --release --frozen --all
             cargo +stable build --examples --release --frozen --all
-
   test_ignored_release:
     docker:
       - image: filecoin/rust:latest
@@ -87,15 +82,9 @@ jobs:
       - restore_cache:
           keys:
             - cargo-v0-{{ checksum "rust-toolchain" }}-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}-{{ arch }}
-            - parameter-cache-{{ .Revision }}
       - run:
           name: Test (stable) in release profile
           command: cargo +stable test --verbose --release --frozen --all -- --ignored
-      - save_cache:
-          key: parameter-cache-{{ .Revision }}
-          paths:
-            - /root/.filecoin-parameter-cache
-
   test_nightly:
     docker:
       - image: filecoin/rust:latest
@@ -107,13 +96,26 @@ jobs:
       - restore_cache:
           keys:
             - cargo-v0-{{ checksum "rust-toolchain" }}-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}-{{ arch }}
-      - restore_cache:
-          keys:
-            - parameter-cache-{{ .Revision }}
       - run:
           name: Test (nightly)
           command: cargo +$(cat rust-toolchain) test --verbose --frozen --all
           no_output_timeout: 15m
+
+  # test_classgroup:
+  #   docker:
+  #     - image: filecoin/rust:latest
+  #   working_directory: /mnt/crate
+  #   steps:
+  #     - checkout
+  #     - attach_workspace:
+  #         at: "."
+  #     - restore_cache:
+  #         keys:
+  #           - cargo-v0-{{ checksum "rust-toolchain" }}-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}-{{ arch }}
+  #     - run:
+  #         name: Test Classgroups (nightly)
+  #         command: cargo +$(cat rust-toolchain) test --verbose --frozen --all --features class_group
+  #         no_output_timeout: 15m
 
   rustfmt:
     docker:
@@ -168,3 +170,6 @@ workflows:
       - test_nightly:
           requires:
             - cargo_fetch
+      # - test_classgroup:
+      #     requires:
+      #       - cargo_fetch
