--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,17 +6,44 @@ edition = "2018"
 license = "MIT OR Apache-2.0"
 homepage = "https://github.com/dignifiedquire/rust-accumulators"
 repository = "https://github.com/dignifiedquire/rust-accumulators"
-
 keywords = []
 
 [dependencies]
-num-bigint = { version = "0.2", features = ["rand", "i128", "u64_digit"], package = "num-bigint-dig" }
+num-bigint = { git = "https://github.com/dignifiedquire/num-bigint", features = ["rand", "i128", "u64_digit", "serde", "prime"], package = "num-bigint-dig" }
 num-traits = "^0.2.6"
-rand = "^0.5"
-rsa = { git = "https://github.com/RustCrypto/RSA" }
-failure = "^0.1.3"
 num-integer = "0.1.39"
+num-iter = "0.1.37"
+rand = "0.6"
+failure = "0.1"
+failure_derive = "0.1"
 blake2 = "0.8.0"
 generic-array = "0.12.0"
 byteorder = "1.2.7"
 bitvec = "0.9.0"
+
+[dependencies.serde]
+optional = true
+version = "1.0"
+default-features = false
+features = ["std", "derive"]
+
+
+[dependencies.classygroup]
+optional = true
+git = "https://github.com/stichtingorganism/classygroup" 
+
+
+[dev-dependencies]
+criterion = "0.2"
+rand_chacha = "0.1"
+
+
+[[bench]]
+name = "accumulators_benchmarks"
+harness = false
+
+
+[features]
+default = ["rsa_group"]
+class_group = ["serde", "classygroup"]
+rsa_group = []
