--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ repository = "https://github.com/dignifiedquire/rust-accumulators"
 keywords = []
 
 [dependencies]
-num-bigint = { git = "https://github.com/dignifiedquire/num-bigint", features = ["rand", "i128", "u64_digit", "serde", "prime"], package = "num-bigint-dig" }
+# num-bigint = { git = "https://github.com/dignifiedquire/num-bigint", features = ["rand", "i128", "u64_digit", "serde", "prime"], package = "num-bigint-dig" }
+num-bigint = { path = "../num-bigint", features = ["rand", "i128", "u64_digit", "serde", "prime"], package = "num-bigint-dig" }
 num-traits = "^0.2.6"
 num-integer = "0.1.39"
 num-iter = "0.1.37"
@@ -20,6 +21,7 @@ blake2 = "0.8.0"
 generic-array = "0.12.0"
 byteorder = "1.2.7"
 bitvec = "0.9.0"
+rayon = "1.0.3"
 
 [dependencies.serde]
 optional = true
@@ -30,7 +32,7 @@ features = ["std", "derive"]
 
 [dependencies.classygroup]
 optional = true
-git = "https://github.com/stichtingorganism/classygroup" 
+git = "https://github.com/stichtingorganism/classygroup"
 
 
 [dev-dependencies]
