--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/dignifiedquire/rust-accumulators"
 keywords = []
 
 [dependencies]
-num-bigint = { git = "https://github.com/dignifiedquire/num-bigint", features = ["rand", "i128", "u64_digit", "serde", "prime"], package = "num-bigint-dig" }
+num-bigint = { version = "0.3", package = "num-bigint-dig", features = ["rand", "i128", "u64_digit", "serde", "prime"] }
 num-traits = "^0.2.6"
 num-integer = "0.1.39"
 num-iter = "0.1.37"
@@ -30,7 +30,7 @@ features = ["std", "derive"]
 
 [dependencies.classygroup]
 optional = true
-git = "https://github.com/stichtingorganism/classygroup" 
+git = "https://github.com/stichtingorganism/classygroup"
 
 
 [dev-dependencies]
